chore(app-coffee): 完成静态页面和首页登录支付接口对接

--- a/apps/app-coffee/src/styles/export.scss
+++ b/apps/app-coffee/src/styles/export.scss
@@ -4,3 +4,10 @@
 @import './layout/layout.scss';
 // @import './theme/index.scss';
 @import './mixins/breakpoints.scss'; // 需要放在theme/index之后
+
+
+@mixin ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
